Fixed overlapping.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -186,12 +186,12 @@ div#wyniki_ogolne_tabela > table > tbody > tr > td:nth-child(2) {
 
 div#wyniki_szczegolowe_tabela thead > tr > th:nth-child(1) {
     border-left: 1px solid #e1e1e1;
-    width: 130px;
+    width: 180px;
 }
 
 div#wyniki_szczegolowe_tabela tbody > tr > td:nth-child(1) {
     border-left: 1px solid #e1e1e1;
-    width: 130px;
+    width: 180px;
 }
 
 .wyniki > tbody tr {
